# lifeline

./: .coverage  .cursorrules  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  LIFELINE.md  PRD.md  README.md  README.pt-BR.md  SECURITY.md  broken_module.py  execution_trace.md  llms.txt  northstar.md  pyproject.toml  render.yaml  sdk_usage_example.py  test_broken.py  verify_chaos_storm.py  verify_cognitive_microkernel.py  verify_flight_dashboard.py  verify_hardening.py  verify_mcp_live.py  verify_split_brain_storm.py  verify_stress_run.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
_legacy/: .cursorrules  PRD-lifeline-v2-draft.md  README.md  example_agent.py  execution_trace.md  fire_test_trace.md  prd_contextfs_lifeline_context_mmu.md  pyproject.toml  run_smoke_tests.py  start_mcp_server.bat  verify_antigravity_mcp_client.py  verify_cognitive_hypervisor.py  verify_context_engine.py  verify_flight_dashboard.py  verify_lifeline_integration_fire_test.py
cloud/: schema.sql  supabase_store.py
devos/: agents.py  swarm.py
docs/: ARCHITECTURE.md  DEPLOY.md  INTEGRATION.md  M3_TIER1_SUPABASE.md  MCP_REMOTE.md
lifeline/: __init__.py  __main__.py  cli.py  cloud.py  context.py  entry.py  ingest.py  mcp_server.py  oauth.py  projection.py  recall.py  schema.sql  staging.py  state.py  store.py  sync.py
lifeline_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: acceptance.py  exam.py  firetest.py  mcp_live_test.py  migrate_check.py
site/: llms-full.txt
tests/: test_cli.py  (+13 more)
(+67 files in other folders)
