[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lifeline-sdk"
version = "0.1.0"
description = "A cognitive microkernel and event-driven infrastructure for agentic systems."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "aiosqlite>=0.19.0"
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.28.0", "pgvector>=0.2.0"]
cli = ["typer>=0.9.0"]

[project.scripts]
lifeline = "lifeline.cli.main:app"
