[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lifeline-context"
version = "0.1.0"
description = "Runtime de contexto para desenvolvimento com IA — o projeto guarda por que ele é o que é; qualquer IA conecta e já sabe."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "aiosqlite>=0.19",
    "mcp>=1.0",
]

[project.scripts]
lifeline = "lifeline.cli:main"
lifeline-mcp = "lifeline.mcp_server:main"

# Pacote chato (flat). `find` com include evita repetir o bug do SDK antigo
# (packages=["lifeline"] que excluía subpacotes), caso subpacotes surjam.
[tool.setuptools.packages.find]
include = ["lifeline*"]
